# style

./: .gitignore  .gitpod.yml  CHANGELOG_OPTIMIZATIONS.md  Cargo.toml  GROUPING.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  QUICK_START_OPTIMIZED.md  README.md  STYLE.md  build.rs  dx.json  key.pem  keystore  size.sh  style.exe.sha256  tailwind-spec.json
.dx/: config.toml
.dx/cache/: cache.json
.dx/style/: animation_generators.toml  base.css  colors.toml  container_queries.toml  css.toml  dynamic.toml  generators.toml  properties.css  property.toml  screens.toml  states.toml  static.toml  style.fbs  theme.css
.github/: ADVANCED_OPTIMIZATIONS.md  INCREMENTAL_PARSING.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  README_OPTIMIZATION.md  ULTIMATE_PERFORMANCE.md  copilot-instructions.md
.github/workflows/: release.yml
benches/: end_to_end.rs  hot_path.rs  single_class.rs  style_benchmark.rs  warm_cycle.rs  write_path.rs
examples/: measure.rs
inspirations/: ANIMATION.md  ANY.md  CORE_CONCEPTS.md  GROUPING.md  INSPECT.md  README.md  REMOTE.md  SYNC.md  THEME.md  TRASH.md  style_core.rs  theme.ts
inspirations/grimoire-css/: README.md
inspirations/themux/: next.config.ts
inspirations/ui/: README.md  drizzle.config.ts  middleware.ts  next.config.ts  package.json  tsconfig.json  (+1 more)
media/: README.md  c.py  dx.json  f.py  presets.ts  theme.json  themes.css
playgrounds/: README.md  index.html  perf_test.html  style.css
scripts/: css_to_toml.py
spec-extra/: variants.json
src/: lib.rs  main.rs
tests/: performance_integration.rs  theme_loading.rs
(+383 files in other folders)
